--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "vinyl-source-stream": "^1.1.0",
     "gulp-uglify": "^1.5.3",
     "merge-stream": "^1.0.0"
+  },
+  "devDependencies": {
+    "jscs": "^3.0.7",
+    "jshint": "^2.9.5"
   }
 }
